--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,6 @@
 .header {
     display: flex;
-    position: relative;
+    position: sticky;
     flex-direction: column;
     background-color: #F4E06D;
     color: #FFFFDE;
@@ -30,24 +30,20 @@
 
 
 
-.headerImage {
-    width: 100%;
-    height: 450px;
-    margin-top: 80px;
-    object-fit: cover;
 
-}
 
 
 @media screen and (min-width: 1024px){
 
     .headerTitleLg {
-        margin-top: -80px;
-        font-size: 72pt;
+ letter-spacing: 3px;
+        margin-top: -50px;
+        font-size: 60pt;
+        text-align: center;
     }
 
     .headerTitleSm {
-        margin-top: -120px;
+        margin-top: -110px;
         font-size: 22pt;
         margin-bottom: 63px;
     }
