--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -1,9 +1,11 @@
 .sidebar {
     flex:9;
-    padding-bottom: 30px;
+align-items: center;
     display: flex;
     flex-direction: column;
-    background-color:#FF8080;
+    background-color:#FFFFDE;
+    font-style: italic;
+    padding: 10px;
 }
 
 .sidebarItem {
@@ -11,12 +13,17 @@
     flex-direction: column;
     align-items: left;
 }
-
+.link{
+    text-decoration: none;
+}
+.cat_name{
+    margin:10px;
+}
 .sidebarTitle{
     margin: 10px;
     padding: 5px;
     border-top: 1px solid #C6F1D6;
-    color:#C6F1D6;
+    color:#0b0b0b;
     font-family: 'Jost', sans-serif;
     font-size: 18px;
 
@@ -30,9 +37,11 @@
 
 .sidebarItem > p{
     padding:30px;
+    margin: 30px;
 }
 
 .sidebarList {
-    list-style: none;
+  display: flex;
+
     margin-bottom: 30px;
 }
