--- a/src/components/topbar/topbar.css
+++ b/src/components/topbar/topbar.css
@@ -10,12 +10,10 @@
 }
 
 .topLeft{
-
   display: flex;
   flex-direction: column;
   justify-content: left;
   margin-top: 15px;
-;
 }
 
 .logout{
@@ -24,25 +22,19 @@
   font-size: 10pt;
   margin: 10px;
 }
-.fa-home{
-  border: 2px solid rgb(220, 209, 209);
+.fa-home, .fa-pen-to-square{
   border-radius: 50%;
-  padding: 10px;
+  padding: 6px;
+  color: #F4E06D;
+  font-size: 18pt;
 }
-.fa-pen-to-square{
-  border: 2px solid rgb(220, 209, 209);
-  border-radius: 50%;
-  padding: 10px;
-  margin-left:7px;
-}
+
 .topList {
   display: flex;
   margin: 10px;
   margin-top: -10px;
   padding: 15px;
 }
-
-
 
 .topRight {
   flex: 1;
@@ -67,11 +59,12 @@
   border-radius: 50%;
   object-fit: cover;
 }
+
 .link{
   text-decoration: none;
 }
-.profileName{
- 
+
+.profileName{ 
   font-size: 15pt;
   font-weight: 500;
   margin-left: 10px;
