--- a/src/pages/profile/profile.css
+++ b/src/pages/profile/profile.css
@@ -1,7 +1,6 @@
 /*UPDATE USER DETAILS*/
 
 .settings{
-    background-color: #F4E06D;
     margin: 20px;
     border-radius: 5px;
     padding: 12px;
@@ -11,6 +10,7 @@
 }
 
 .settingsTitle{
+    color:#FFFFDE;
     text-align: center;
     font-weight: 500;
     font-size: 22pt;
