--- a/src/components/post/post.css
+++ b/src/components/post/post.css
@@ -14,8 +14,9 @@
 }
 
 .postTitle{
-    font-size: 30pt;
-    line-height: 40px;
+    font-size: 25pt;
+    line-height: 30px;
+    height: 50px;
     color: #342929;
     text-align: center;
     margin-bottom: -5px;
@@ -97,6 +98,7 @@ color: #FF7396;
 @media screen and (min-width: 1200px)  {
     .postImg{
         width:350px;
+  
         }
         .postDesc{
             width: 350px;
