--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -6,7 +6,7 @@
     background-size: cover;
     display: flex;
     flex-direction: column;
-/*     height:100vh; */
+    height: 100vh;
 }
 .loginPwd{
   display: flex;
