--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,5 +1,4 @@
 
-
 .login{
     background-image: url(https://images.unsplash.com/photo-1534531688091-a458257992cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
     background-position: center;
@@ -21,7 +20,7 @@
 }
 
 .loginBox{  
-    background-color: #FFFFDE;
+  background-color: rgb(255, 255, 222, 0.8);
     opacity: 0.85;
     margin-top: 30px;
     padding: 20px;
@@ -64,20 +63,19 @@
       flex-direction: column;
       padding:10px;
     }
-  
 
-    
-  @media screen and (min-width: 600px) and (max-width: 1023) {
-    body{
-        margin: 70px;
-    }
+    /*MEDIA QUERIES - TABLET*/
+      
+  @media screen and (min-width: 600px) and (max-width: 1023px) {
+    .loginBox {
+      margin-top: 60px;
+      max-width: 75%;
+      height: 460px;
+  }
     .loginTitle{
       font-size: 70pt;
       margin-bottom: -25px;
       margin-top: -30px;
-    }
-    .loginBox{
-      max-width: 75%;
     }
     .loginButton, .loginRegisterButton {
      max-width: 50%;      
@@ -88,28 +86,22 @@
   }
 }
 
+    /*MEDIA QUERIES - DESKTOP*/
+
 @media screen and (min-width: 1024px){
   .loginBox {
-    background-color: #FFFFDE;
-    opacity: 0.85;
-    margin-top: 16px;
-    padding: 20px;
-    min-width: 280px;
+    margin-top: 80px;
     max-width: 40%;
-    height: 400px;
-    border-top-right-radius: 60px;
+    height: 600px;
 }
+
 .registerLabel{
   font-size: 20pt;
   font-weight:900;
-  color:#F4E06D;
 }
-.RegisterForm {
-  display: flex;
-  flex-direction: column;
-  margin-left: 20px;
+.loginForm{
+    margin-top: 15px;
 }
-
 .buttonBox2 {
 display: flex;
 flex-direction: column;
@@ -119,7 +111,7 @@ text-align: center;
 width: 240px;
 position: absolute;
 }
-.registerLoginButton, .registerButton {
+.loginButton, .loginRegisterButton {
   font-size: 20pt;
   height: 55px;
   border-radius: 30px;
@@ -132,16 +124,9 @@ position: absolute;
     padding: 10px;
 }
 .question{
-color:#F4E06D;
 font-size: 16pt;
 font-weight: 500;
 margin-top:15px;
 margin-bottom:5px;
-}
-.loginForm {
-  display: flex;
-  flex-direction: column;
-  margin-top: 30px;
-  margin-left: 20px;
 }
 }
