--- a/src/pages/write/write.css
+++ b/src/pages/write/write.css
@@ -74,7 +74,8 @@ textarea{
 .link{
     text-decoration: none;
 }
-/*MEDIA QUERIES*/
+
+/*MEDIA QUERIES - TABLET*/
 
 @media screen and (min-width: 600px) and (max-width: 1023px){
     .backButton {
@@ -88,7 +89,8 @@ textarea{
         border-radius: 20px;
         background-color: #FFFFDE;
     }
-.writeForm{        background-color: #FFFFDE;
+.writeForm{        
+        background-color: #FFFFDE;
         padding: 25px;
         margin: 10px;
         border-radius: 20px;
@@ -103,12 +105,10 @@ textarea{
 }
 }
 
+/*MEDIA QUERIES - DESKTOP*/
 
 @media screen and (min-width: 1024px){
-   /*  body{
-        background-image: url(https://images.unsplash.com/photo-1595981235363-6cf7a4a34c76?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80);
-        background-size: cover;
-    } */
+ 
     .backButton {
         margin: 40px;
     }
